# brave-core

./: package.json
android/: brave_java_sources.gni
app/: brave_generated_resources.grd  brave_settings_strings.grdp  generated_resources.grd
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_tab_helpers.cc
components/brave_shields/resources/cookie_consent_blocker/: BUILD.gn  cookie_consent_blocker.html  cookie_consent_blocker.tsx
components/brave_shields/resources/cookie_consent_blocker/api/: cookie_consent_proxy.ts
components/brave_shields/resources/cookie_consent_blocker/components/main-panel/: index.tsx  style.ts
components/brave_shields/resources/cookie_consent_blocker/stories/: locale.ts
patches/: chrome-VERSION.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-renderer-chrome_content_renderer_client.cc.patch  chrome-test-BUILD.gn.patch  third_party-blink-public-devtools_protocol-browser_protocol.pdl.patch  third_party-blink-renderer-core-dom-document.cc.patch  third_party-blink-renderer-core-exported-web_document.cc.patch  third_party-blink-renderer-core-frame-local_frame.cc.patch  third_party-blink-renderer-core-inspector-inspector_dom_agent.cc.patch  third_party-blink-renderer-core-inspector-inspector_page_agent.cc.patch  third_party-blink-renderer-core-page-chrome_client_impl.cc.patch
renderer/: BUILD.gn  brave_content_renderer_client.cc  sources.gni
resources/: resource_ids.spec
script/: uplift.py
test/: BUILD.gn
(+187 files in other folders)
